<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Yamba</string>
	<string name="start_service">Start Service</string>
	<string name="hello_world">Hello Basheer!</string>
	<string name="stop_service">Stop Service</string>
	<string name="refresh_service">Refresh Service</string>
	<string name="username">Username</string>
	<string name="username_summary">Please Enter Your Username</string>
	<string name="password">Password</string>
	<string name="password_summary">Please Enter Your Password</string>
	<string name="server">Server</string>
	<string name="server_url">Please Enter Server URL</string>
	<string name="refresh_interval">Refresh Interval</string>
	<string name="refresh_interval_summary">Please Enter The Frequency to Refresh</string>
	<string name="preference">Settings</string>
	<string name="update_button">Update</string>
	<string-array name="delayNames">
		<item>1 min</item>
		<item>5 mins</item>
	</string-array>

	<string-array name="dealyValues">
		<item>60000</item>
		<item>300000</item>
	</string-array>
</resources>