<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="username"
        android:summary="@string/username_summary"
        android:title="@string/username" />
    <EditTextPreference
        android:key="password"
        android:summary="@string/password_summary"
        android:title="@string/password" 
        android:password="true"/>
    <EditTextPreference
        android:key="server"
        android:summary="@string/server_url"
        android:title="@string/server" />
    <ListPreference android:title="@string/refresh_interval" android:key="delay" android:summary="@string/refresh_interval_summary" android:entryValues="@array/dealyValues" android:entries="@array/delayNames"/>

</PreferenceScreen>